--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -183,6 +183,15 @@
   #info-container #event-submit {
     margin: 20px 0;
   }
+
+  #items-list {
+    list-style: none;
+    padding-left: 0;
+  }
+
+  #items-list li {
+    display: flex;
+  }
   
   /* footer */
   footer {
