--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,6 +210,12 @@
   .dashboard-events-container form {
     display: inline-block;
   }
+
+  /* Edit page */
+  .img-preview {
+    width: 100px;
+    margin-top: 20px;
+  }
   
   /* footer */
   footer {
